libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__edge_all_numbers_invalid.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: All numbers (invalid as lexical identifier)
expression: "123"
info:
  kind: Err
---
123
^
