libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__edge_complex_operators.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Complex operator chain
expression: "<=>=><=>"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "<=>=><=>",
    ),
    kind: Symbol,
}
