libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__edge_dash_only.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Single dash as symbol
expression: "-"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "-",
    ),
    kind: Symbol,
}
