libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__edge_single_character.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Single character identifier
expression: x
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "x",
    ),
    kind: Lexical,
}
