libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__edge_single_underscore.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Single underscore identifier
expression: _
info:
  kind: Err
---
_
 ^
invalid identifier
