libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__error_control_chars.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Identifier with control character
expression: testbeep
info:
  kind: Err
---
testbeep
    ^
