libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_colon_in_fake_url.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Colon in invalid URL-like string (should be rejected)
expression: "`example:not-url/`"
info:
  kind: Err
---
`example:not-url/`
^
