libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_colon_symbol.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Colon as bare symbol (should be rejected)
expression: ":"
info:
  kind: Err
---
:
^
