libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_colon_symbol_backticks_compound.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Compound colon in backticks (should be rejected)
expression: "`:=`"
info:
  kind: Err
---
`:=`
 ^
invalid identifier
expected http(s) url with trailing `/`
