libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_colon_symbol_compound.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Compound colon symbol (should be rejected)
expression: "::"
info:
  kind: Err
---
::
^
invalid identifier
